--- a/digger_game.cbp
+++ b/digger_game.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/digger_game" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/robot_game" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -21,10 +21,10 @@
 				</Linker>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/digger_game" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/robot_game" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="0" />
-				<Option compiler="gcc" />
+				<Option compiler="mingw32_compiler" />
 				<Compiler>
 					<Add option="-O2" />
 				</Compiler>
